Testing the views: first tests added

--- a/forumApp/templates/forumApp/homepage_login.html
+++ b/forumApp/templates/forumApp/homepage_login.html
@@ -16,7 +16,7 @@
 
 <h1><center> Space Forum Homepage </center></h1>
 <br/>
-<h2> <center> Tópicos Recentes </center> </h2>
+<h2> <center> Topicos Recentes </center> </h2>
 
 	{% if topicos.count > 0 %}
 		{% for t in topicos reversed %}
